# minstro

./: CLAUDE.md  README.md
firmware/esp32s3/bringup/: .gitignore  CMakeLists.txt
firmware/esp32s3/bringup/main/: CMakeLists.txt  Kconfig.projbuild  bringup_gpio_test.c  bringup_gpio_test.h  bringup_i2c_test.c  bringup_i2c_test.h  bringup_led_test.c  bringup_led_test.h  bringup_sdcard_test.c  bringup_sdcard_test.h  bringup_wifi_test.c  bringup_wifi_test.h  main.c
firmware/hmi/: README.md
firmware/hmi/hmi/: Cargo.toml
firmware/hmi/hmi/.cargo/: config.toml
firmware/hmi/hmi/src/: comms.rs  encoder.rs  i2c_peripheral.rs  main.rs  protocol.rs
firmware/hmi/hmi_bsp/: Cargo.toml
firmware/hmi/hmi_bsp/src/: lib.rs
firmware/hmi/hmi_inputs/: Cargo.toml
hardware/prototype/display_board/: display_battery.kicad_sch  display_board.kicad_pro  display_board.kicad_sch  display_connectors.kicad_sch  display_microcontroller.kicad_sch  mcu_power.kicad_sch  mpu_audio.kicad_sch
hardware/prototype/hmi_board/: #auto_saved_files#  hmi_board.kicad_pro  hmi_board.kicad_sch  hmi_keypad.kicad_sch  hmi_microcontroller.kicad_sch  hmi_nav_switch.kicad_sch  hmi_vfo.kicad_sch
hardware/prototype/minstro_combined_board/: hmi_keypad.kicad_sch  hmi_microcontroller.kicad_sch  hmi_nav_switch.kicad_sch  hmi_vfo.kicad_sch  minstro_combined_board.kicad_dru  minstro_combined_board.kicad_pcb  minstro_combined_board.kicad_pro  minstro_combined_board.kicad_sch  mpu_audio.kicad_sch  mpu_battery.kicad_sch  mpu_connectors.kicad_sch  mpu_microcontroller.kicad_sch  mpu_power.kicad_sch  ~minstro_combined_board.kicad_sch.lck
hardware/prototype/minstro_combined_board/ibom/: ibom.html
hardware/prototype/minstro_combined_board/output/: minstro_combined_board-B_Cu.gbr  minstro_combined_board-B_Mask.gbr  minstro_combined_board-B_Paste.gbr  minstro_combined_board-B_Silkscreen.gbr  minstro_combined_board-Edge_Cuts.gbr  minstro_combined_board-F_Cu.gbr  minstro_combined_board-F_Mask.gbr  (+7 more)
