[package]
name = "hmi"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
panic-halt = "0.2"
# panic-probe = "0.3"
rtt-target = { version = "0.5.0" }

cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"

atsamd-hal = { git = "https://github.com/benvonhandorf/atsamd.git", branch="atsamd10d" }
hmi_bsp = { path = "../hmi_bsp" }
smart-leds = "0.3.0"
more-asserts = "0.3.1"

hmi_inputs = { path = "../hmi_inputs" }

[dependencies.ws2812-timer-delay]
version = "0.3.0"
# features = ["slow"]


[features]
default = ["atsamd-hal/samd10d", "atsamd-hal/samd10d-rt", "atsamd-hal/unproven"]

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = "fat" # better optimizations