[package]
name = "hmi_bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
panic-halt = "0.2"
# panic-probe = "0.3"
rtt-target = { version = "0.5.0" }

cortex-m-semihosting = "0.5.0"

# atsamd-hal = { git = "https://github.com/benvonhandorf/atsamd.git", branch="atsamd10d", default-features = false }
atsamd-hal = { path="/home/benvh/projects/atsamd/hal", default-features = false }

# for cargo flash
[package.metadata]
chip = "ATSAMD10D13AM"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[features]
# ask the HAL to enable atsamd11c support
default = ["rt", "atsamd-hal/samd10d", "unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd10d-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []